
apply plugin: 'kotlin'
apply plugin: 'jacoco'
apply plugin: 'application'

defaultTasks 'installDist'

sourceCompatibility = 1.8

mainClassName = 'swatlin.DemoKt'
applicationDefaultJvmArgs = [
    '-Xms64M', '-Xmx2G', '-XX:+UseNUMA', '-XX:+UseParallelGC', '-XX:+AggressiveOpts'
]

tasks.installDist.dependsOn 'build'

repositories {
    jcenter()
    mavenLocal()
}

dependencies {
    // MAIN
    compile ("org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlinVersion")
    compile ("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")

    compile ("ch.qos.logback:logback-classic:$logbackVersion")

    compile ("io.vertx:vertx-lang-kotlin:$vertxVersion")
    compile ("io.vertx:vertx-web:$vertxVersion")
    compile ("io.vertx:vertx-web-client:$vertxVersion")
    compile ("io.vertx:vertx-auth-jwt:$vertxVersion")
    compile ("io.vertx:vertx-mongo-client:$vertxVersion")

//    compile ("org.mongodb:mongo-java-driver:$mongodbVersion")
//    compile ("org.mongodb:mongodb-driver-async:$mongodbVersion")

    compile ("com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jacksonVersion")
    compile ("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion")
    compile ("com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion")
    compile ("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion")

    // TEST
    testCompile ("junit:junit:$junitVersion")
    testCompile ("org.jetbrains.kotlin:kotlin-test:$kotlinVersion")
    testCompile ("io.vertx:vertx-unit:$vertxVersion")
    testCompile ("com.squareup.okhttp3:okhttp:$okhttpVersion")

    testCompile ("info.cukes:cucumber-junit:$cucumberVersion")
    testCompile ("info.cukes:cucumber-java8:$cucumberVersion")
}

test {
    testLogging {
        events 'skipped', 'failed', 'standardOut', 'standardError'
    }
}

jacocoTestReport {
    dependsOn 'test'
    reports {
        xml.enabled = true
        html.enabled = true
    }
}

compileKotlin {
    kotlinOptions {
        jvmTarget = '1.8'
    }
}

task all(dependsOn:  [ 'installDist', 'jacocoTestReport' ])
